--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -1,21 +1,204 @@
-.page-wrap {
-    width: 90%;
-    /*288/320*/
-    margin: 0 5%;
-    /*16/320*/
+$perfectpink: #ee5fa0;
+$ctapink: #f49ac1;
+
+
+html, body{
+    font-family: 'Inconsolata', monospace;
+    background-color: #fff;
+    width: 100%;
+}
+
+body{
+    margin: 166px 0;
+}
+header{
+    width: 100%;
+    position: fixed;
+    background: #fff; 
+    margin: -166px 0;
+}
+
+
+nav{
+    width: 100%;
+    padding: 20px 0;
+    float: left;
+    background-color: #cfcfcf;
+}
+
+nav ul li a{
+    font-size: 1.5rem;
+    font-weight: bold;
+    text-decoration: none;
+    color: #000;
+    text-transform: uppercase;
+
+    //margin-left: 15%;
+    &:hover, &.active{
+        color: $perfectpink;
+    }
+}
+
+nav ul{
+    display: flex;
+    justify-content: space-evenly;
 }
 
 h1 a {
-    width: 100%;
-    height: 100%;
+    width: 288px;
+    height: 102px;
     background: url(../img/bgclogo.png) no-repeat;
     text-indent: -9999px;
     overflow: hidden;
     float: left;
     position: relative;
-    //left: 50%;
+    //left: 1%;
     /*left of its parent container*/
     
-    margin: 25px 0 25px -108px;
+   // margin: 15px 0 25px -288px;
     /* center by dividing width in half and making negtive*/
+}
+
+.header-toprow{
+    display:flex;
+    justify-content:space-between;
+    margin: 0 30px;
+
+    button{
+        align-self: center;
+    }
+}
+//END OF HEADER//////////////////////////////////
+.cta-button{
+    background-color: $ctapink;
+    font-family: 'Inconsolata', monospace;
+    padding: 10px 2%;
+    font-size: 1.2rem;
+    font-weight: 400;
+    color: #000;
+    border: 1px solid $perfectpink;
+    text-transform: uppercase;
+    //box-shadow: 5px 55px 50px -20px #b6b6b6;    #donate-button{
+}
+
+.hero img{
+    width: 100%;
+}
+
+.founder{
+    width:100%;
+
+    .founder-video video,{
+        width: 65%;
+        float: left;
+    }
+    .founder-info{
+        width: 35%;
+        float:left;
+
+        span{
+            color: $ctapink;
+            font-weight: 700;
+        }
+
+        p{
+            font-size: 1.4rem;
+        }
+
+        strong{
+            font-weight: 700;
+            font-size: 1.8rem;
+        }
+    }
+}
+
+
+.partners{
+    clear: both;
+    padding: 0 100px;
+
+    .partner-logos {
+        display: flex;
+        flex: 1;
+        flex-wrap: wrap;
+        flex-direction: row;
+        align-items: center;
+        justify-content: space-around;
+        
+        img {
+            max-height: 100px;
+            max-width: 200px;
+            margin-right: 20px;
+            //align-items: center;
+            //padding: 10px 80px;
+            //height: 120px;
+        }
+    }
+
+    h2 {
+        text-align: center;
+        padding: 50px 0; 
+    }
+
+
+}
+
+.vision{
+    padding: 100px 0;
+    text-align: center;
+
+    p{
+        line-height: 1.5rem;
+        padding: 0 100px;
+    }
+
+}
+
+h2{
+    font-size: 1.6rem;
+    font-weight: 700;
+    margin-bottom: 30px;
+    text-transform: uppercase;
+}
+
+.three-boxes{
+    padding: 100px;
+    background-image: url(../img/bg-code.png);
+    background-repeat: x-repeat;
+    background-size: contain;
+    display: flex;
+    justify-content: space-around;
+    background-position: fixed;
+}
+
+.box{
+    //padding: 60px 20px;
+    width: 244px;
+    height: 228px;
+    background-image: url(../img/bracketbox.png);
+    background-repeat: no-repeat;
+    background-size: contain;
+    //background-position: fixed;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: 0.3s;
+
+    &:hover{
+        background-color: $perfectpink;
+
+        h3{
+            color: #fff;
+        }
+    }
+
+    h3{
+        font-size: 1.5rem;
+        color: $perfectpink;
+        text-transform: uppercase;
+        font-weight: 700;
+        transition: 0.3s;
+
+    }
+
 }
