--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,6 +1,6 @@
 html, body {
   font-family: 'Inconsolata', monospace;
-  background-color: #fff;
+  background-color: #f7f7f7;
   width: 100%; }
 
 body {
@@ -63,25 +63,34 @@ h1 a {
   width: 100%; }
 
 .founder {
-  width: 100%; }
-  .founder .founder-video video {
-    width: 65%;
-    float: left; }
+  display: flex; }
+  .founder video {
+    flex: 2;
+    align-self: center;
+    width: 65%; }
   .founder .founder-info {
+    display: flex;
+    flex: 1;
+    flex-direction: column;
+    align-self: center;
     width: 35%;
-    float: left; }
+    padding: 100px; }
+    .founder .founder-info button {
+      margin: 20px 0; }
     .founder .founder-info span {
       color: #f49ac1;
       font-weight: 700; }
     .founder .founder-info p {
-      font-size: 1.4rem; }
+      font-size: 1.4rem;
+      margin-left: -40px; }
     .founder .founder-info strong {
+      margin-top: 5px;
       font-weight: 700;
       font-size: 1.8rem; }
 
 .partners {
   clear: both;
-  padding: 0 100px; }
+  padding: 100px 100px; }
   .partners .partner-logos {
     display: flex;
     flex: 1;
@@ -94,8 +103,7 @@ h1 a {
       max-width: 200px;
       margin-right: 20px; }
   .partners h2 {
-    text-align: center;
-    padding: 50px 0; }
+    text-align: center; }
 
 .vision {
   padding: 100px 0;
@@ -139,5 +147,47 @@ h2 {
     text-transform: uppercase;
     font-weight: 700;
     transition: 0.3s; }
+
+footer {
+  border-top: 1px solid #000;
+  position: relative;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  padding: 80px 30px; }
+  footer a {
+    text-decoration: underline;
+    color: #000; }
+    footer a:hover {
+      opacity: .5; }
+
+.footer-links {
+  display: flex;
+  justify-content: flex-start;
+  list-style: none; }
+  .footer-links a {
+    padding: 0 5px; }
+
+.social-icons {
+  justify-content: flex-end; }
+
+.social-icons a {
+  float: left;
+  text-indent: -9999px;
+  overflow: hidden;
+  width: 46px;
+  height: 46px;
+  margin: 0 2px;
+  border-radius: 50%; }
+
+footer a.icon-twitter {
+  background: url(../img/icon-twitter.svg) no-repeat center #ee5fa0; }
+
+footer a.icon-facebook {
+  background: url(../img/icon-facebook.svg) no-repeat center #ee5fa0; }
+
+footer a.icon-pinterest {
+  background: url(../img/icon-pinterest.svg) no-repeat center #ee5fa0;
+  background-size: 40%; }
 
 /*# sourceMappingURL=main.css.map */
