--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,5 +1,5 @@
 html, body {
-  font-family: 'Inconsolata', monospace;
+  font-family: "Inconsolata", monospace;
   background-color: #f7f7f7;
   width: 100%; }
 
@@ -51,13 +51,16 @@ h1 a {
 
 .cta-button {
   background-color: #f49ac1;
-  font-family: 'Inconsolata', monospace;
+  font-family: "Inconsolata", monospace;
   padding: 10px 2%;
   font-size: 1.2rem;
   font-weight: 400;
   color: #000;
   border: 1px solid #ee5fa0;
-  text-transform: uppercase; }
+  text-transform: uppercase;
+  transition: 0.3s; }
+  .cta-button:hover {
+    background-color: #ee5fa0; }
 
 .hero img {
   width: 100%; }
@@ -102,6 +105,8 @@ h1 a {
       max-height: 100px;
       max-width: 200px;
       margin-right: 20px; }
+      .partners .partner-logos img:hover {
+        opacity: 0.5; }
   .partners h2 {
     text-align: center; }
 
@@ -154,7 +159,8 @@ footer {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  padding: 80px 30px; }
+  padding: 80px 30px;
+  transition: 0.3s; }
   footer a {
     text-decoration: underline;
     color: #000; }
@@ -189,5 +195,104 @@ footer a.icon-facebook {
 footer a.icon-pinterest {
   background: url(../img/icon-pinterest.svg) no-repeat center #ee5fa0;
   background-size: 40%; }
+
+.events-main {
+  background-image: url(../img/bg-code.png);
+  background-repeat: y-repeat;
+  background-size: 80%;
+  width: 100%; }
+  .events-main .space {
+    height: 30px; }
+
+.search {
+  margin-top: 20px;
+  padding: 60px 20px;
+  background-color: #ebebeb;
+  margin: 0 auto;
+  text-align: center; }
+  .search h3 {
+    font-size: 2rem;
+    text-transform: uppercase; }
+  .search input[type="text"] {
+    font-size: 2rem;
+    font-family: "Inconsolata", monospace;
+    padding: 2px 0px; }
+  .search input[type="date"] {
+    font-size: 2rem; }
+  .search button {
+    display: flex;
+    background-color: #ee5fa0;
+    font-size: 1.3rem;
+    padding: 2rem 3rem; }
+  .search .search-input {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    padding: 20px 0px; }
+
+.search button, .result button, .result-right button {
+  width: 80px;
+  height: 22px;
+  text-transform: uppercase;
+  font-size: 1.3;
+  color: #fff;
+  text-align: center;
+  font-family: "Inconsolata", monospace; }
+
+.events-list {
+  display: flex;
+  flex-direction: column;
+  width: 65%;
+  margin: 0 auto;
+  text-align: center; }
+  .events-list h2 {
+    margin-top: 20px; }
+
+.result, .result-right {
+  background-image: url(../img/tagbox.png);
+  background-repeat: no-repeat;
+  background-size: contain;
+  width: 265px;
+  height: 100px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between; }
+  .result button, .result-right button {
+    background-color: #464646;
+    font-size: 1rem; }
+    .result button:hover, .result-right button:hover {
+      opacity: 0.5; }
+  .result p.date, .result-right p.date {
+    color: #ee5fa0;
+    font-size: 1.2rem; }
+  .result p.title, .result-right p.title {
+    font-size: 1.3rem;
+    text-transform: uppercase;
+    font-weight: 700; }
+
+.result {
+  align-self: flex-start; }
+
+.result-right {
+  align-self: flex-end; }
+
+.apply {
+  padding: 80px 0;
+  width: 100%;
+  margin: 0 auto;
+  display: flex; }
+  .apply .apply-cta {
+    padding: 40px 20px;
+    width: 80%;
+    margin: 0 auto;
+    color: #fff;
+    background-color: #f49ac1;
+    font-size: 2rem;
+    font-family: "Inconsolata", monospace;
+    text-transform: uppercase;
+    border: 1px solid #ee5fa0; }
+    .apply .apply-cta:hover {
+      background-color: #ee5fa0; }
 
 /*# sourceMappingURL=main.css.map */
