--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -1,9 +1,10 @@
 $perfectpink: #ee5fa0;
 $cta-pink: #f49ac1;
+$mainfont: 'Inconsolata', monospace;
 
 
 html, body{
-    font-family: 'Inconsolata', monospace;
+    font-family: $mainfont;
     background-color: #f7f7f7;
     width: 100%;
 }
@@ -71,14 +72,18 @@ h1 a {
 //END OF HEADER//////////////////////////////////
 .cta-button{
     background-color: $cta-pink;
-    font-family: 'Inconsolata', monospace;
+    font-family: $mainfont;
     padding: 10px 2%;
     font-size: 1.2rem;
     font-weight: 400;
     color: #000;
     border: 1px solid $perfectpink;
     text-transform: uppercase;
+    transition: 0.3s;
     //box-shadow: 5px 55px 50px -20px #b6b6b6;    #donate-button{
+        &:hover{
+            background-color: $perfectpink;
+        }
 }
 
 .hero img{
@@ -138,6 +143,7 @@ h1 a {
         align-items: center;
         justify-content: space-around;
         
+
         img {
             max-height: 100px;
             max-width: 200px;
@@ -145,6 +151,9 @@ h1 a {
             //align-items: center;
             //padding: 10px 80px;
             //height: 120px;
+            &:hover{
+                opacity: 0.5;
+            }
         }
     }
 
@@ -223,6 +232,7 @@ footer {
     flex-direction: row;
     justify-content: space-between;
     padding: 80px 30px;
+    transition: 0.3s;
     //left: 50%;
     //margin: 25px 0 25px -75px;  
 
@@ -267,3 +277,148 @@ footer a.icon-pinterest {
     background: url(../img/icon-pinterest.svg) no-repeat center $perfectpink;
     background-size: 40%;
 }
+
+
+.events-main{
+    //overflow: scroll;
+    background-image: url(../img/bg-code.png);
+    background-repeat: y-repeat;
+    background-size: 80%;
+    width: 100%;
+
+    .space{
+        height: 30px;
+    }
+
+}
+
+.search{
+   margin-top: 20px;
+    padding: 60px 20px;
+    background-color: #ebebeb;
+    margin: 0 auto;
+    text-align: center;
+
+    h3{
+        font-size: 2rem;
+        text-transform: uppercase;
+    }
+    input[type="text"]{
+        font-size: 2rem;
+        font-family: $mainfont;  
+        padding: 2px 0px; 
+    }
+    input[type="date"]{
+        font-size: 2rem;
+    }
+
+    button{
+        display: flex;
+        //align-self: center;
+        @extend %button;
+        background-color: $perfectpink;
+        font-size: 1.3rem;
+        padding: 2rem 3rem;
+    }
+
+    .search-input{
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        padding: 20px 0px;
+    }
+}
+
+
+%button {
+    width: 80px;
+    height:22px;
+    text-transform: uppercase;
+    font-size: 1.3;
+    color: #fff;
+    text-align: center;
+    //font-size: 1rem;
+    font-family: $mainfont;
+}
+.events-list{
+    display: flex;
+    flex-direction: column;
+    width: 65%;
+    margin: 0 auto;
+    text-align: center;
+
+    h2{
+        margin-top: 20px;
+    }
+}
+
+%result-style{
+    background-image: url(../img/tagbox.png);
+    background-repeat: no-repeat;
+    background-size: contain;
+    width: 265px;
+    height: 100px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+
+    button {
+        @extend %button;
+        background-color: #464646;
+        font-size: 1rem;
+        
+        &:hover{
+            opacity: 0.5;
+        }
+    }
+    p.date{
+        color: $perfectpink;
+        font-size: 1.2rem;
+    }
+    p.title{
+        font-size: 1.3rem;
+        text-transform: uppercase;
+        font-weight: 700;
+    }
+}
+
+.result{
+    @extend %result-style;
+    align-self: flex-start;
+
+
+}
+
+.result-right{
+    @extend %result-style;
+    align-self: flex-end;
+
+}
+
+.apply{
+    padding: 80px 0 ;
+    width: 100%;
+    margin: 0 auto;
+    display: flex;
+    //border-top: 1px solid $cta-pink;
+
+    .apply-cta{
+        padding: 40px 20px;
+        width: 80%;
+        margin: 0 auto;
+        color: #fff;
+        background-color: $cta-pink;
+        font-size: 2rem;
+        font-family: $mainfont;
+        text-transform: uppercase;
+        border: 1px solid $perfectpink;
+
+        &:hover{
+            background-color: $perfectpink;
+        }
+    }
+}
+
+
+
